{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 474,
  "lineage": "dc06ac8e-f064-065b-8475-61a29fcc977a",
  "resources": [
    {
      "module": "module.backend",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "nhatnd19-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/zones/asia-east2-b/instanceGroups/nhatnd19-instance-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-11-12T19:52:20.525-08:00",
            "enable_cdn": false,
            "fingerprint": "-onOyZicq4s=",
            "generated_id": -1141103717,
            "health_checks": [
              "projects/learning-cloud-with-fpt/global/healthChecks/nhatnd19-healthcheck"
            ],
            "id": "projects/learning-cloud-with-fpt/global/backendServices/nhatnd19-backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "locality_lb_policy": "ROUND_ROBIN",
            "log_config": [
              {
                "enable": false,
                "sample_rate": 0
              }
            ],
            "name": "nhatnd19-backend",
            "port_name": "http",
            "project": "learning-cloud-with-fpt",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/backendServices/nhatnd19-backend",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "module.healthcheck.google_compute_health_check.nhatnd19_healthcheck",
            "module.instance_group.google_compute_autoscaler.my_autoscaler",
            "module.instance_group.google_compute_instance_group_manager.nhatnd19-instance_group",
            "module.instance_template.google_compute_instance_template.my_instance_template",
            "module.network.google_compute_firewall.nhatnd19-allow-healthcheck",
            "module.network.google_compute_firewall.nhatnd19-allow-internal",
            "module.network.google_compute_firewall.nhatnd19-allow-ssh",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnetwork1"
          ]
        }
      ]
    },
    {
      "module": "module.forwardingrules",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "nhatnd19_forwarding_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-11-12T19:53:19.046-08:00",
            "id": "projects/learning-cloud-with-fpt/regions/global/forwardingRules/nhatnd19-frontend",
            "ip_address": "35.241.55.92",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "nhatnd19-frontend",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "learning-cloud-with-fpt",
            "region": "global",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/forwardingRules/nhatnd19-frontend",
            "target": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/targetHttpProxies/nhatnd19-target-proxy"
          },
          "dependencies": [
            "module.backend.google_compute_backend_service.nhatnd19-backend",
            "module.forwardingrules.google_compute_target_http_proxy.nhatnd19-proxy",
            "module.forwardingrules.google_compute_url_map.nhatnd19-url-map",
            "module.healthcheck.google_compute_health_check.nhatnd19_healthcheck",
            "module.instance_group.google_compute_autoscaler.my_autoscaler",
            "module.instance_group.google_compute_instance_group_manager.nhatnd19-instance_group",
            "module.instance_template.google_compute_instance_template.my_instance_template",
            "module.network.google_compute_firewall.nhatnd19-allow-healthcheck",
            "module.network.google_compute_firewall.nhatnd19-allow-internal",
            "module.network.google_compute_firewall.nhatnd19-allow-ssh",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnetwork1"
          ]
        }
      ]
    },
    {
      "module": "module.forwardingrules",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "nhatnd19-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-12T19:53:06.503-08:00",
            "id": "projects/learning-cloud-with-fpt/global/targetHttpProxies/nhatnd19-target-proxy",
            "name": "nhatnd19-target-proxy",
            "project": "learning-cloud-with-fpt",
            "proxy_bind": false,
            "proxy_id": -1141103795,
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/targetHttpProxies/nhatnd19-target-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/urlMaps/nhatnd19-loadbalancer"
          },
          "dependencies": [
            "module.backend.google_compute_backend_service.nhatnd19-backend",
            "module.forwardingrules.google_compute_url_map.nhatnd19-url-map",
            "module.healthcheck.google_compute_health_check.nhatnd19_healthcheck",
            "module.instance_group.google_compute_autoscaler.my_autoscaler",
            "module.instance_group.google_compute_instance_group_manager.nhatnd19-instance_group",
            "module.instance_template.google_compute_instance_template.my_instance_template",
            "module.network.google_compute_firewall.nhatnd19-allow-healthcheck",
            "module.network.google_compute_firewall.nhatnd19-allow-internal",
            "module.network.google_compute_firewall.nhatnd19-allow-ssh",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnetwork1"
          ]
        }
      ]
    },
    {
      "module": "module.forwardingrules",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "nhatnd19-url-map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-12T19:52:54.157-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/backendServices/nhatnd19-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "Af21aoV0TCY=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/learning-cloud-with-fpt/global/urlMaps/nhatnd19-loadbalancer",
            "map_id": -1141103750,
            "name": "nhatnd19-loadbalancer",
            "path_matcher": [],
            "project": "learning-cloud-with-fpt",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/urlMaps/nhatnd19-loadbalancer",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.backend.google_compute_backend_service.nhatnd19-backend",
            "module.healthcheck.google_compute_health_check.nhatnd19_healthcheck",
            "module.instance_group.google_compute_autoscaler.my_autoscaler",
            "module.instance_group.google_compute_instance_group_manager.nhatnd19-instance_group",
            "module.instance_template.google_compute_instance_template.my_instance_template",
            "module.network.google_compute_firewall.nhatnd19-allow-healthcheck",
            "module.network.google_compute_firewall.nhatnd19-allow-internal",
            "module.network.google_compute_firewall.nhatnd19-allow-ssh",
            "module.network.google_compute_network.vpc_network",
            "module.network.google_compute_subnetwork.subnetwork1"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nhatnd19-allow-healthcheck",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-12T19:51:04.750-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learning-cloud-with-fpt/global/firewalls/nhatnd19-allow-healthcheck",
            "log_config": [],
            "name": "nhatnd19-allow-healthcheck",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/networks/nhatnd19-vpc",
            "priority": 1000,
            "project": "learning-cloud-with-fpt",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/firewalls/nhatnd19-allow-healthcheck",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nhatnd19-allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-12T19:51:04.831-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learning-cloud-with-fpt/global/firewalls/nhatnd19-allow-internal",
            "log_config": [],
            "name": "nhatnd19-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/networks/nhatnd19-vpc",
            "priority": 1000,
            "project": "learning-cloud-with-fpt",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/firewalls/nhatnd19-allow-internal",
            "source_ranges": [
              "10.170.0.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nhatnd19-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-12T19:51:04.959-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/learning-cloud-with-fpt/global/firewalls/nhatnd19-allow-ssh",
            "log_config": [],
            "name": "nhatnd19-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/networks/nhatnd19-vpc",
            "priority": 1000,
            "project": "learning-cloud-with-fpt",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/firewalls/nhatnd19-allow-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "my vpc",
            "enable_ula_internal_ipv6": false,
            "id": "projects/learning-cloud-with-fpt/global/networks/nhatnd19-vpc",
            "mtu": 0,
            "name": "nhatnd19-vpc",
            "project": "learning-cloud-with-fpt",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/networks/nhatnd19-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-11-12T19:51:05.698-08:00",
            "description": "my subnet",
            "gateway_address": "10.170.0.1",
            "id": "projects/learning-cloud-with-fpt/regions/asia-east2/subnetworks/nhatnd19-vpc-asia-east2",
            "ip_cidr_range": "10.170.0.0/20",
            "name": "nhatnd19-vpc-asia-east2",
            "network": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/global/networks/nhatnd19-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "learning-cloud-with-fpt",
            "purpose": "PRIVATE",
            "region": "asia-east2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/learning-cloud-with-fpt/regions/asia-east2/subnetworks/nhatnd19-vpc-asia-east2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}